rust/herb-highlighter/tests/snapshots/html_diagnostic_test__renders_an_inline_diagnostics_document_with_highlight_api_markers.snap
---
source: herb-highlighter/tests/html_diagnostic_test.rs
expression: "render_document_html(&document, &sink_options(MarkerMode::HighlightApi))"
---
<figure class="herb-highlight" data-herb-theme="onedark">
<figcaption class="herb-file-header">app/views/users/show.html.erb</figcaption>
<pre class="herb-code"><code><span class="herb-line" data-line="1"><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-line-marked" data-line="2" data-herb-severity="error" data-herb-markers="[[2,18,&quot;error&quot;]]"><span class="herb-token-whitespace">  </span><span class="herb-token-erb-start">&lt;%=</span> user.name <span class="herb-token-erb-end">%&gt;</span></span>
<span class="herb-line herb-line-marked" data-line="3" data-herb-severity="error" data-herb-markers="[[2,6,&quot;error&quot;]]"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">hello</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-annotation-message"><span class="herb-severity-label herb-severity-error">error</span> unclosed <code>&lt;%=</code> tag <span class="herb-diagnostic-code">(parser-error)</span></span></span>
<span class="herb-line herb-line-marked" data-line="4" data-herb-severity="warning" data-herb-markers="[[2,8,&quot;warning&quot;]]"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">world</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-annotation-message"><span class="herb-severity-label herb-severity-warning">warning</span> avoid inline spans <span class="herb-diagnostic-code">(-)</span></span></span>
<span class="herb-line" data-line="5"><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span></code></pre>
</figure>
