rust/herb-highlighter/tests/snapshots/html_diagnostic_test__renders_hover_messages_in_an_inline_document.snap
---
source: herb-highlighter/tests/html_diagnostic_test.rs
expression: "render_document_html(&document, &options)"
---
<figure class="herb-highlight herb-messages-hover" data-herb-theme="onedark">
<figcaption class="herb-file-header">app/views/users/show.html.erb</figcaption>
<pre class="herb-code"><code><span class="herb-line" data-line="1"><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-line-marked" data-line="2" data-herb-severity="error"><span class="herb-token-whitespace">  </span><mark class="herb-marker herb-marker-error"><span class="herb-token-erb-start">&lt;%=</span></mark><mark class="herb-marker herb-marker-error"> </mark><mark class="herb-marker herb-marker-error">user</mark><mark class="herb-marker herb-marker-error">.</mark><mark class="herb-marker herb-marker-error">name</mark><mark class="herb-marker herb-marker-error"> </mark><mark class="herb-marker herb-marker-error"><span class="herb-token-erb-end">%&gt;</span></mark></span>
<span class="herb-line herb-line-marked" data-line="3" data-herb-severity="error"><span class="herb-token-whitespace">  </span><mark class="herb-marker herb-marker-error"><span class="herb-token-html-tag-start">&lt;</span></mark><mark class="herb-marker herb-marker-error"><span class="herb-tag-name">p</span></mark><mark class="herb-marker herb-marker-error"><span class="herb-token-html-tag-end">&gt;</span></mark><mark class="herb-marker herb-marker-error"><span class="herb-token-identifier">h</span></mark><span class="herb-token-identifier">ello</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-annotation-message"><span class="herb-severity-label herb-severity-error">error</span> unclosed <code>&lt;%=</code> tag <span class="herb-diagnostic-code">(parser-error)</span></span></span>
<span class="herb-line herb-line-marked" data-line="4" data-herb-severity="warning"><span class="herb-token-whitespace">  </span><mark class="herb-marker herb-marker-warning"><span class="herb-token-html-tag-start">&lt;</span></mark><mark class="herb-marker herb-marker-warning"><span class="herb-tag-name">span</span></mark><mark class="herb-marker herb-marker-warning"><span class="herb-token-html-tag-end">&gt;</span></mark><span class="herb-token-identifier">world</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-annotation-message"><span class="herb-severity-label herb-severity-warning">warning</span> avoid inline spans <span class="herb-diagnostic-code">(-)</span></span></span>
<span class="herb-line" data-line="5"><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span></code></pre>
</figure>
