rust/herb-highlighter/tests/snapshots/html_diagnostic_test__renders_hover_messages_on_a_card.snap
---
source: herb-highlighter/tests/html_diagnostic_test.rs
expression: "render_document_html(&document, &options)"
---
<figure class="herb-highlight herb-diagnostic herb-messages-hover" data-herb-theme="onedark">
<header class="herb-diagnostic-header"><span class="herb-severity-label herb-severity-error">error</span> <span class="herb-diagnostic-message">unclosed <code>&lt;%=</code> tag</span> <span class="herb-diagnostic-code">(<a href="https://herb.tools/rules/parser-error" rel="noopener noreferrer">parser-error</a>)</span> <span class="herb-diagnostic-suffix">(fixable)</span></header>
<figcaption class="herb-file-header"><a href="file:///app/views/show.html.erb" rel="noopener noreferrer">app/views/users/show.html.erb:2:2</a></figcaption>
<pre class="herb-code"><code><span class="herb-line herb-line-dimmed" data-line="1"><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-line-marked" data-line="2" data-herb-severity="error"><span class="herb-token-whitespace">  </span><mark class="herb-marker herb-marker-error"><span class="herb-token-erb-start">&lt;%=</span></mark><mark class="herb-marker herb-marker-error"> </mark><mark class="herb-marker herb-marker-error">user</mark><mark class="herb-marker herb-marker-error">.</mark><mark class="herb-marker herb-marker-error">name</mark><mark class="herb-marker herb-marker-error"> </mark><mark class="herb-marker herb-marker-error"><span class="herb-token-erb-end">%&gt;</span></mark></span>
<span class="herb-line herb-line-marked" data-line="3" data-herb-severity="error"><span class="herb-token-whitespace">  </span><mark class="herb-marker herb-marker-error"><span class="herb-token-html-tag-start">&lt;</span></mark><mark class="herb-marker herb-marker-error"><span class="herb-tag-name">p</span></mark><mark class="herb-marker herb-marker-error"><span class="herb-token-html-tag-end">&gt;</span></mark><mark class="herb-marker herb-marker-error"><span class="herb-token-identifier">h</span></mark><span class="herb-token-identifier">ello</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-annotation-message"><span class="herb-severity-label herb-severity-error">error</span> unclosed <code>&lt;%=</code> tag <span class="herb-diagnostic-code">(<a href="https://herb.tools/rules/parser-error" rel="noopener noreferrer">parser-error</a>)</span></span></span>
<span class="herb-line herb-line-dimmed" data-line="4"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">world</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span></span></code></pre>
</figure>
