rust/herb-highlighter/tests/snapshots/html_diagnostic_test__wraps_a_document_with_chrome_and_hydration.snap
---
source: herb-highlighter/tests/html_diagnostic_test.rs
expression: "wrap_document_html(&fragment, &stylesheet, true)"
---
<!doctype html>
<html>
<head>
<meta charset="utf-8">
<title>herb-highlight</title>
<style>
/* herb-highlight theme: onedark */

.herb-highlight {
  margin: 0;
}

.herb-highlight .herb-file-header {
  color: var(--herb-file-header, #11A8CD);
}

.herb-highlight .herb-code {
  margin: 0;
  white-space: pre-wrap;
  overflow-wrap: anywhere;
}

.herb-highlight .herb-line[data-line]::before {
  content: attr(data-line);
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-line-dimmed {
  opacity: 0.6;
}

.herb-highlight .herb-line-focus[data-line]::before {
  color: var(--herb-line-number-focus, #11A8CD);
  font-weight: bold;
}

.herb-highlight .herb-token-whitespace { color: var(--herb-token-whitespace); }
.herb-highlight .herb-token-nbsp { color: var(--herb-token-nbsp); }
.herb-highlight .herb-token-newline { color: var(--herb-token-newline); }
.herb-highlight .herb-token-identifier { color: var(--herb-token-identifier); }
.herb-highlight .herb-ruby-keyword { color: var(--herb-ruby-keyword); }
.herb-highlight .herb-token-html-doctype { color: var(--herb-token-html-doctype); }
.herb-highlight .herb-token-html-tag-start { color: var(--herb-token-html-tag-start); }
.herb-highlight .herb-token-html-tag-start-close { color: var(--herb-token-html-tag-start-close); }
.herb-highlight .herb-token-html-tag-end { color: var(--herb-token-html-tag-end); }
.herb-highlight .herb-token-html-tag-self-close { color: var(--herb-token-html-tag-self-close); }
.herb-highlight .herb-token-html-comment-start { color: var(--herb-token-html-comment-start); }
.herb-highlight .herb-token-html-comment-end { color: var(--herb-token-html-comment-end); }
.herb-highlight .herb-token-erb-start { color: var(--herb-token-erb-start); }
.herb-highlight .herb-token-erb-content { color: var(--herb-token-erb-content); }
.herb-highlight .herb-token-erb-end { color: var(--herb-token-erb-end); }
.herb-highlight .herb-token-lt { color: var(--herb-token-lt); }
.herb-highlight .herb-token-slash { color: var(--herb-token-slash); }
.herb-highlight .herb-token-equals { color: var(--herb-token-equals); }
.herb-highlight .herb-token-quote { color: var(--herb-token-quote); }
.herb-highlight .herb-token-dash { color: var(--herb-token-dash); }
.herb-highlight .herb-token-underscore { color: var(--herb-token-underscore); }
.herb-highlight .herb-token-exclamation { color: var(--herb-token-exclamation); }
.herb-highlight .herb-token-semicolon { color: var(--herb-token-semicolon); }
.herb-highlight .herb-token-colon { color: var(--herb-token-colon); }
.herb-highlight .herb-token-percent { color: var(--herb-token-percent); }
.herb-highlight .herb-token-ampersand { color: var(--herb-token-ampersand); }
.herb-highlight .herb-token-character { color: var(--herb-token-character); }
.herb-highlight .herb-token-error { color: var(--herb-token-error); }
.herb-highlight .herb-token-eof { color: var(--herb-token-eof); }

.herb-highlight .herb-tag-name { color: var(--herb-token-html-tag-start); }
.herb-highlight .herb-attr-name { color: var(--herb-attr-name); }
.herb-highlight .herb-attr-value { color: var(--herb-attr-value); }
.herb-highlight .herb-comment { color: var(--herb-token-html-comment-start); }

.herb-highlight .herb-severity-label { font-weight: bold; }
.herb-highlight .herb-severity-label.herb-severity-error { color: var(--herb-severity-error, #F14C4C); }
.herb-highlight .herb-severity-label.herb-severity-warning { color: var(--herb-severity-warning, #F5F543); }
.herb-highlight .herb-severity-label.herb-severity-info { color: var(--herb-severity-info, #11A8CD); }
.herb-highlight .herb-severity-label.herb-severity-hint { color: var(--herb-severity-hint, #666666); }

.herb-highlight .herb-diagnostic-header {
  display: block;
  margin: 0 0 0.75em;
}

.herb-highlight .herb-diagnostic-message code {
  padding: 0 0.25em;
  border-radius: 3px;
  background-color: var(--herb-inline-code-bg, rgba(127, 127, 127, 0.18));
}

.herb-highlight .herb-diagnostic-code {
  opacity: 0.7;
}

.herb-highlight .herb-diagnostic-suffix {
  opacity: 0.7;
}

.herb-highlight .herb-annotation-message {
  display: block;
  user-select: none;
  opacity: 0.85;
}

.herb-highlight .herb-line-marked[data-line]::before {
  font-weight: bold;
}

.herb-highlight a {
  color: inherit;
}

.herb-highlight mark.herb-marker {
  color: inherit;
  background-color: transparent;
  text-decoration: underline wavy;
  text-decoration-skip-ink: none;
}

.herb-highlight mark.herb-marker-error { background-color: var(--herb-marker-error-bg, rgba(241, 76, 76, 0.15)); text-decoration-color: var(--herb-severity-error, #F14C4C); }
.herb-highlight mark.herb-marker-warning { background-color: var(--herb-marker-warning-bg, rgba(245, 245, 67, 0.15)); text-decoration-color: var(--herb-severity-warning, #F5F543); }
.herb-highlight mark.herb-marker-info { background-color: var(--herb-marker-info-bg, rgba(17, 168, 205, 0.15)); text-decoration-color: var(--herb-severity-info, #11A8CD); }
.herb-highlight mark.herb-marker-hint { background-color: var(--herb-marker-hint-bg, rgba(102, 102, 102, 0.15)); text-decoration-color: var(--herb-severity-hint, #666666); }

::highlight(herb-marker-error) { background-color: var(--herb-marker-error-bg, rgba(241, 76, 76, 0.15)); text-decoration: underline wavy var(--herb-severity-error, #F14C4C); }
::highlight(herb-marker-warning) { background-color: var(--herb-marker-warning-bg, rgba(245, 245, 67, 0.15)); text-decoration: underline wavy var(--herb-severity-warning, #F5F543); }
::highlight(herb-marker-info) { background-color: var(--herb-marker-info-bg, rgba(17, 168, 205, 0.15)); text-decoration: underline wavy var(--herb-severity-info, #11A8CD); }
::highlight(herb-marker-hint) { background-color: var(--herb-marker-hint-bg, rgba(102, 102, 102, 0.15)); text-decoration: underline wavy var(--herb-severity-hint, #666666); }

.herb-progress-rule {
  position: relative;
  margin: 1.5em 0;
  border: none;
  border-top: 1px solid var(--herb-rule, rgba(127, 127, 127, 0.4));
}

.herb-progress-rule::after {
  content: attr(data-herb-progress);
  position: absolute;
  top: -0.75em;
  right: 1em;
  padding: 0 0.5em;
  font-size: 0.8em;
  color: var(--herb-rule-label, #666666);
  background-color: var(--herb-rule-label-bg, Canvas);
}

.herb-highlight {
  --herb-token-nbsp: #5C6370;
  --herb-token-identifier: #ABB2BF;
  --herb-ruby-keyword: #C678DD;
  --herb-token-html-doctype: #61AFEF;
  --herb-token-html-tag-start: #E06C75;
  --herb-token-html-tag-start-close: #E06C75;
  --herb-token-html-tag-end: #E06C75;
  --herb-token-html-tag-self-close: #E06C75;
  --herb-token-html-comment-start: #5C6370;
  --herb-token-html-comment-end: #5C6370;
  --herb-token-erb-start: #BE5046;
  --herb-token-erb-content: #E5C07B;
  --herb-token-erb-end: #BE5046;
  --herb-token-lt: #E06C75;
  --herb-token-slash: #E06C75;
  --herb-token-equals: #56B6C2;
  --herb-token-quote: #98C379;
  --herb-token-dash: #ABB2BF;
  --herb-token-underscore: #ABB2BF;
  --herb-token-exclamation: #C678DD;
  --herb-token-semicolon: #ABB2BF;
  --herb-token-colon: #ABB2BF;
  --herb-token-percent: #BE5046;
  --herb-token-ampersand: #D19A66;
  --herb-token-character: #ABB2BF;
  --herb-token-error: #E05252;
  --herb-diff-removed-line-background: #3A2224;
  --herb-diff-added-line-background: #1E3226;
  --herb-diff-removed-background: #6B2E31;
  --herb-diff-added-background: #2E5E3D;
  --herb-attr-name: #D19A66;
  --herb-attr-value: #98C379;
}
</style>
</head>
<body>
<figure class="herb-highlight" data-herb-theme="onedark">
<figcaption class="herb-file-header">app/views/users/show.html.erb</figcaption>
<pre class="herb-code"><code><span class="herb-line" data-line="1"><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-line-marked" data-line="2" data-herb-severity="error" data-herb-markers="[[2,18,&quot;error&quot;]]"><span class="herb-token-whitespace">  </span><span class="herb-token-erb-start">&lt;%=</span> user.name <span class="herb-token-erb-end">%&gt;</span></span>
<span class="herb-line herb-line-marked" data-line="3" data-herb-severity="error" data-herb-markers="[[2,6,&quot;error&quot;]]"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">hello</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-annotation-message"><span class="herb-severity-label herb-severity-error">error</span> unclosed <code>&lt;%=</code> tag <span class="herb-diagnostic-code">(parser-error)</span></span></span>
<span class="herb-line herb-line-marked" data-line="4" data-herb-severity="warning" data-herb-markers="[[2,8,&quot;warning&quot;]]"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">world</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-annotation-message"><span class="herb-severity-label herb-severity-warning">warning</span> avoid inline spans <span class="herb-diagnostic-code">(-)</span></span></span>
<span class="herb-line" data-line="5"><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span></code></pre>
</figure>
<script>
(() => {
  if (!("highlights" in CSS)) return

  const priorities = { error: 4, warning: 3, info: 2, hint: 1 }
  const rangesBySeverity = new Map()

  const rangeForColumns = (line, start, end) => {
    const walker = document.createTreeWalker(line, NodeFilter.SHOW_TEXT, {
      acceptNode: (node) =>
        node.parentElement.closest(".herb-annotation-message") ? NodeFilter.FILTER_REJECT : NodeFilter.FILTER_ACCEPT,
    })

    let offset = 0
    let startNode = null
    let startOffset = 0
    let endNode = null
    let endOffset = 0

    for (let node = walker.nextNode(); node; node = walker.nextNode()) {
      const length = node.data.length

      if (startNode === null && start < offset + length) {
        startNode = node
        startOffset = start - offset
      }

      if (end <= offset + length) {
        endNode = node
        endOffset = end - offset
        break
      }

      offset += length
    }

    if (startNode === null || endNode === null) return null

    const range = new Range()
    range.setStart(startNode, startOffset)
    range.setEnd(endNode, endOffset)

    return range
  }

  for (const line of document.querySelectorAll(".herb-line[data-herb-markers]")) {
    let markers

    try {
      markers = JSON.parse(line.getAttribute("data-herb-markers"))
    } catch {
      continue
    }

    for (const [start, end, severity] of markers) {
      const range = rangeForColumns(line, start, end)

      if (range === null) continue

      if (!rangesBySeverity.has(severity)) rangesBySeverity.set(severity, [])

      rangesBySeverity.get(severity).push(range)
    }
  }

  for (const [severity, ranges] of rangesBySeverity) {
    const highlight = new Highlight(...ranges)

    highlight.priority = priorities[severity] ?? 0

    CSS.highlights.set(`herb-marker-${severity}`, highlight)
  }
})()
</script>
</body>
</html>
